# python-playground

./: .gitignore  .travis.yml  data_structure.py  decision_trees.py  find_nearer_stores.py  find_nearer_stores_test.py  geocode.py  geocode_test.py  linear-models.py  linear_models.py  logistic_regression.py  pandas.md  requirements.txt  setup.cfg  test.py  tox.ini
Importing-Data-in-Python/: importing-data-from-other-file-types.py  importing-data-from-the-internet.py  introduction-and-flat-files.py  working-with-relational-databases-in-python.py
Intermediate-Python-for-Data-Science/: dictionaries-pandas.py  matplotlib.py
Introduction-to-Python-for-Data-Science/: Python Basics.py  functions-and-packages.py  numpy.py  python-lists.py
Python-Data-Science-Toolbox/: default-arguments-variable-length-arguments-and-scope.py  lambda-functions-and-error-handling.py  writing-your-own-functions.py
analysis/: bing_dun_dun.py
association/: association_analysis.py
basic/: dict_test.py  errors_exception_handling.py  functions_test.py  list_test.py  python_for_loop.ipynb  sequence_functions_test.py  set_test.py  tuple_test.py
classification/: classification.ipynb  exercise.ipynb  exercise_3_tackle_the_titanic_dataset.ipynb
data_aggregation_and_group/: data_aggregation_test.py  split_apply_combine_test.py
data_cleaning/: data_transformation_test.py  handling_missing_data_test.py  regular_expression_test.py  string_manipulation_test.py
data_wrangling/: combining_merging_datasets_test.py
decision_trees/: decision_trees.ipynb  exercises.ipynb  (+1 more)
testdome/: merge-names.py
(+247 files in other folders)
