[metadata]
name = python-playground
version = 0.1.0
author = jingwen-z
description = Learning Python with different projects.
url = https://github.com/jingwen-z/python-playground
home-page = https://github.com/jingwen-z/python-playground
project_urls =
    Source = https://github.com/jingwen-z/python-playground
    Tracker = https://github.com/jingwen-z/python-playground/issues
keywords = python3, numpy, pandas
